Overhaul primes from Long to Int for MASSIVE performance boost; migrate all other classes to run with testProblem* for maven compatibiltiy.